--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
         #reportContainer {
             position: fixed;
-            bottom: 0;
+            bottom: 60px;
             right: 0;
             display: none;
             max-height: 400px;
@@ -430,7 +430,6 @@
             overflow: auto;
             width: 60%;
             direction: rtl;
-            border-bottom: 2px solid var(--secondary-color);
         }
 
         #reportContainer * {
